# OpenEngine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CascadedShadowMap.cpp  CascadedShadowMap.h  Character Template F - 3 Animations.fbx  Character Template F new.fbx  Character Template F.fbx  Character Template F1.fbx  Character Template F2.fbx  Character Template F3.fbx  Character Template F4.fbx  Character Template F5.fbx  Character Template F9.fbx  CharacterModel.fbx  CharacterModelTPose w shorts.fbx  CharacterModelTPose wo shorts.fbx  CharacterModelTPose.fbx  Character_TPose_Anim wo NLA.fbx  Character_TPose_Anim.fbx  Character_TPose_NoAnim.fbx  Character_TPose_NoAnim3.fbx  Cleanup.cpp  Cleanup.h  DeferredRenderer.cpp  DeferredRenderer.h  Engine.cpp  Engine.h  Globals.cpp  Globals.h  GuiManager.cpp  GuiManager.h  InputManager.cpp  InputManager.h  Logger.h  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  (+44 more)
animation/: Animation.cpp  Animation.h  AnimationBatchSmoother.cpp  AnimationBatchSmoother.h  AnimationController.cpp  AnimationController.h  DebugTools.cpp  DebugTools.h  SkeletonPose.cpp  SkeletonPose.h
animations/: Idle.fbx  Jab_Head.fbx  Jab_Head2.fbx  Stance1.fbx
cleanup/: Cleanup.cpp  Cleanup.h
common_utils/: Logger.cpp  Logger.h  Utils.cpp
engine/: Engine.cpp  Engine.h
heatmaps/: animations_Idle.fbx_heatmap.txt  animations_Jab_Head.fbx_heatmap.txt  animations_Stance1.fbx_heatmap.txt
input/: InputManager.cpp  InputManager.h
light/: LightManager.cpp  LightManager.h
logs/: pose_dump_animations_Idle.fbx.json  pose_dump_animations_Jab_Head.fbx.json  pose_dump_animations_Stance1.fbx.json
model/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.h
physics/: PhysicsManager.cpp  PhysicsManager.h
render_utils/: RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.h
scene/: Scene.cpp  Scene.h  SceneTest1.cpp  SceneTest1.h  SceneTest2.cpp  SceneTest2.h  SceneTest3.cpp  SceneTest3.h
setup/: Globals.cpp  Globals.h  GraphicsSetup.cpp  GraphicsSetup.h  InputCallbacks.cpp  InputCallbacks.h  Setup.cpp  Setup.h
shaders/: Shader.cpp  Shader.h  ShaderManager.cpp  (+1 more)
(+19 files in other folders)
